--- a/samples/test11.tex
+++ b/samples/test11.tex
@@ -30,22 +30,22 @@
 
 % Qubit circuit matrix:
 %
-% q0: gAA, gBA, n  , gDA, n  
-% q1: n  , gBB, gCB, gDB, n  
-% q2: n  , n  , n  , gDC, n  
+% q0: gAxA, gBxA, n  , gDxA, n  
+% q1: n  , gBxB, gCxB, gDxB, n  
+% q2: n  , n  , n  , gDxC, n  
 
 \documentclass[11pt]{article}
 \input{xyqcirc.tex}
 
 % definitions for the circuit elements
 
-\def\gAA{\op{H}\w\A{gAA}}
-\def\gBA{\gnqubit{U_{f(x)}}{d}\w\A{gBA}}
-\def\gBB{\gspace{U_{f(x)}}\w\A{gBB}}
-\def\gCB{\op{H}\w\A{gCB}}
-\def\gDA{\gnqubit{U_{f(x,y)}}{dd}\w\A{gDA}}
-\def\gDB{\gspace{U_{f(x,y)}}\w\A{gDB}}
-\def\gDC{\gspace{U_{f(x,y)}}\w\A{gDC}}
+\def\gAxA{\op{H}\w\A{gAxA}}
+\def\gBxA{\gnqubit{U_{f(x)}}{d}\w\A{gBxA}}
+\def\gBxB{\gspace{U_{f(x)}}\w\A{gBxB}}
+\def\gCxB{\op{H}\w\A{gCxB}}
+\def\gDxA{\gnqubit{U_{f(x,y)}}{dd}\w\A{gDxA}}
+\def\gDxB{\gspace{U_{f(x,y)}}\w\A{gDxB}}
+\def\gDxC{\gspace{U_{f(x,y)}}\w\A{gDxC}}
 
 % definitions for bit labels and initial states
 
@@ -56,11 +56,11 @@
 % The quantum circuit as an xymatrix
 
 \xymatrix@R=5pt@C=10pt{
-    \bA & \gAA &\gBA &\n   &\gDA &\n  
-\\  \bB & \n   &\gBB &\gCB &\gDB &\n  
-\\  \bC & \n   &\n   &\n   &\gDC &\n  
+    \bA & \gAxA &\gBxA &\n   &\gDxA &\n  
+\\  \bB & \n   &\gBxB &\gCxB &\gDxB &\n  
+\\  \bC & \n   &\n   &\n   &\gDxC &\n  
 %
-% Vertical lines and other post-xymatrix latex
+% vertical lines and other post-xymatrix latex
 %
 }
 
