--- a/samples/test14.tex
+++ b/samples/test14.tex
@@ -98,66 +98,66 @@
 
 % Qubit circuit matrix:
 %
-% q0: n  , n  , gCA, n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , gSA, n  
-% q1: n  , n  , n  , gDB, n  , n  , n  , n  , n  , n  , n  , n  , gMB, n  , n  , n  , n  , n  , gSB, n  
-% q2: n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , gNC, n  , n  , n  , n  , gSC, n  
-% s0: gAD, gBD, gCD, n  , gED, gFD, gGD, gHD, gID, gJD, gKD, gLD, gMD, n  , gOD, gPD, gQD, gRD, gSD, N  
-% s1: n  , gBE, gCE, gDE, gEE, gFE, gGE, gHE, gIE, gJE, n  , gLE, gME, gNE, gOE, gPE, gQE, gRE, gSE, N  
-% c0: N  , N  , N  , N  , N  , N  , N  , gHF, N  , N  , N  , N  , N  , N  , N  , N  , N  , gRF, gSF, N  
-% c1: N  , N  , N  , N  , N  , N  , N  , N  , gIG, N  , N  , N  , N  , N  , N  , N  , N  , gRG, gSG, N  
+% q0: n  , n  , gCxA, n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , gSxA, n  
+% q1: n  , n  , n  , gDxB, n  , n  , n  , n  , n  , n  , n  , n  , gMxB, n  , n  , n  , n  , n  , gSxB, n  
+% q2: n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , n  , gNxC, n  , n  , n  , n  , gSxC, n  
+% s0: gAxD, gBxD, gCxD, n  , gExD, gFxD, gGxD, gHxD, gIxD, gJxD, gKxD, gLxD, gMxD, n  , gOxD, gPxD, gQxD, gRxD, gSxD, N  
+% s1: n  , gBxE, gCxE, gDxE, gExE, gFxE, gGxE, gHxE, gIxE, gJxE, n  , gLxE, gMxE, gNxE, gOxE, gPxE, gQxE, gRxE, gSxE, N  
+% c0: N  , N  , N  , N  , N  , N  , N  , gHxF, N  , N  , N  , N  , N  , N  , N  , N  , N  , gRxF, gSxF, N  
+% c1: N  , N  , N  , N  , N  , N  , N  , N  , gIxG, N  , N  , N  , N  , N  , N  , N  , N  , gRxG, gSxG, N  
 
 \documentclass[11pt]{article}
 \input{xyqcirc.tex}
 
 % definitions for the circuit elements
 
-\def\gAD{\op{H}\w\A{gAD}}
-\def\gBD{\b\w\A{gBD}}
-\def\gBE{\o\w\A{gBE}}
-\def\gCA{\b\w\A{gCA}}
-\def\gCD{\o\w\A{gCD}}
-\def\gCE{*-{}\w\A{gCE}}
-\def\gDB{\b\w\A{gDB}}
-\def\gDE{\o\w\A{gDE}}
-\def\gED{\b\w\A{gED}}
-\def\gEE{\o\w\A{gEE}}
-\def\gFD{\op{H}\w\A{gFD}}
-\def\gGD{\meter\w\A{gGD}}
-\def\gFE{*-{}\w\A{gFE}}
-\def\gGE{\meter\w\A{gGE}}
-\def\gHD{\b\W\A{gHD}}
-\def\gHF{\o\W\A{gHF}}
-\def\gHE{*-{}\W\A{gHE}}
-\def\gIE{\b\W\A{gIE}}
-\def\gIG{\o\W\A{gIG}}
-\def\gID{\A{gID}}
-\def\gJD{\z\A{gJD}}
-\def\gJE{\z\A{gJE}}
-\def\gKD{\op{H}\w\A{gKD}}
-\def\gLD{\b\w\A{gLD}}
-\def\gLE{\o\w\A{gLE}}
-\def\gMB{\b\w\A{gMB}}
-\def\gMD{\o\w\A{gMD}}
-\def\gME{*-{}\w\A{gME}}
-\def\gNC{\b\w\A{gNC}}
-\def\gNE{\o\w\A{gNE}}
-\def\gOD{\b\w\A{gOD}}
-\def\gOE{\o\w\A{gOE}}
-\def\gPD{\op{H}\w\A{gPD}}
-\def\gQD{\meter\w\A{gQD}}
-\def\gPE{*-{}\w\A{gPE}}
-\def\gQE{\meter\w\A{gQE}}
-\def\gRD{\gnqubit{\txt{Process\\Syndrome}}{ddd}\W\A{gRD}}
-\def\gRE{\gspace{\txt{Process\\Syndrome}}\W\A{gRE}}
-\def\gRF{\gspace{\txt{Process\\Syndrome}}\W\A{gRF}}
-\def\gRG{\gspace{\txt{Process\\Syndrome}}\W\A{gRG}}
-\def\gSA{\gnqubit{{\cal R}}{dd}\w\A{gSA}}
-\def\gSB{\gspace{{\cal R}}\w\A{gSB}}
-\def\gSC{\gspace{{\cal R}}\w\A{gSC}}
-\def\gSD{\b\W\A{gSD}}
-\def\gSE{\b\W\A{gSE}}
-\def\gSF{\b\W\A{gSF}}
-\def\gSG{\b\W\A{gSG}}
+\def\gAxD{\op{H}\w\A{gAxD}}
+\def\gBxD{\b\w\A{gBxD}}
+\def\gBxE{\o\w\A{gBxE}}
+\def\gCxA{\b\w\A{gCxA}}
+\def\gCxD{\o\w\A{gCxD}}
+\def\gCxE{*-{}\w\A{gCxE}}
+\def\gDxB{\b\w\A{gDxB}}
+\def\gDxE{\o\w\A{gDxE}}
+\def\gExD{\b\w\A{gExD}}
+\def\gExE{\o\w\A{gExE}}
+\def\gFxD{\op{H}\w\A{gFxD}}
+\def\gGxD{\meter\w\A{gGxD}}
+\def\gFxE{*-{}\w\A{gFxE}}
+\def\gGxE{\meter\w\A{gGxE}}
+\def\gHxD{\b\W\A{gHxD}}
+\def\gHxF{\o\W\A{gHxF}}
+\def\gHxE{*-{}\W\A{gHxE}}
+\def\gIxE{\b\W\A{gIxE}}
+\def\gIxG{\o\W\A{gIxG}}
+\def\gIxD{\A{gIxD}}
+\def\gJxD{\z\A{gJxD}}
+\def\gJxE{\z\A{gJxE}}
+\def\gKxD{\op{H}\w\A{gKxD}}
+\def\gLxD{\b\w\A{gLxD}}
+\def\gLxE{\o\w\A{gLxE}}
+\def\gMxB{\b\w\A{gMxB}}
+\def\gMxD{\o\w\A{gMxD}}
+\def\gMxE{*-{}\w\A{gMxE}}
+\def\gNxC{\b\w\A{gNxC}}
+\def\gNxE{\o\w\A{gNxE}}
+\def\gOxD{\b\w\A{gOxD}}
+\def\gOxE{\o\w\A{gOxE}}
+\def\gPxD{\op{H}\w\A{gPxD}}
+\def\gQxD{\meter\w\A{gQxD}}
+\def\gPxE{*-{}\w\A{gPxE}}
+\def\gQxE{\meter\w\A{gQxE}}
+\def\gRxD{\gnqubit{\txt{Process\\Syndrome}}{ddd}\W\A{gRxD}}
+\def\gRxE{\gspace{\txt{Process\\Syndrome}}\W\A{gRxE}}
+\def\gRxF{\gspace{\txt{Process\\Syndrome}}\W\A{gRxF}}
+\def\gRxG{\gspace{\txt{Process\\Syndrome}}\W\A{gRxG}}
+\def\gSxA{\gnqubit{{\cal R}}{dd}\w\A{gSxA}}
+\def\gSxB{\gspace{{\cal R}}\w\A{gSxB}}
+\def\gSxC{\gspace{{\cal R}}\w\A{gSxC}}
+\def\gSxD{\b\W\A{gSxD}}
+\def\gSxE{\b\W\A{gSxE}}
+\def\gSxF{\b\W\A{gSxF}}
+\def\gSxG{\b\W\A{gSxG}}
 
 % definitions for bit labels and initial states
 
@@ -172,27 +172,27 @@
 % The quantum circuit as an xymatrix
 
 \xymatrix@R=5pt@C=10pt{
-    \bA & \n   &\n   &\gCA &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gSA &\n  
-\\  \bB & \n   &\n   &\n   &\gDB &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gMB &\n   &\n   &\n   &\n   &\n   &\gSB &\n  
-\\  \bC & \n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gNC &\n   &\n   &\n   &\n   &\gSC &\n  
-\\  \bD & \gAD &\gBD &\gCD &\n   &\gED &\gFD &\gGD &\gHD &\gID &\gJD &\gKD &\gLD &\gMD &\n   &\gOD &\gPD &\gQD &\gRD &\gSD &\N  
-\\  \bE & \n   &\gBE &\gCE &\gDE &\gEE &\gFE &\gGE &\gHE &\gIE &\gJE &\n   &\gLE &\gME &\gNE &\gOE &\gPE &\gQE &\gRE &\gSE &\N  
-\\  \bF & \N   &\N   &\N   &\N   &\N   &\N   &\N   &\gHF &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gRF &\gSF &\N  
-\\  \bG & \N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gIG &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gRG &\gSG &\N  
+    \bA & \n   &\n   &\gCxA &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gSxA &\n  
+\\  \bB & \n   &\n   &\n   &\gDxB &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gMxB &\n   &\n   &\n   &\n   &\n   &\gSxB &\n  
+\\  \bC & \n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\n   &\gNxC &\n   &\n   &\n   &\n   &\gSxC &\n  
+\\  \bD & \gAxD &\gBxD &\gCxD &\n   &\gExD &\gFxD &\gGxD &\gHxD &\gIxD &\gJxD &\gKxD &\gLxD &\gMxD &\n   &\gOxD &\gPxD &\gQxD &\gRxD &\gSxD &\N  
+\\  \bE & \n   &\gBxE &\gCxE &\gDxE &\gExE &\gFxE &\gGxE &\gHxE &\gIxE &\gJxE &\n   &\gLxE &\gMxE &\gNxE &\gOxE &\gPxE &\gQxE &\gRxE &\gSxE &\N  
+\\  \bF & \N   &\N   &\N   &\N   &\N   &\N   &\N   &\gHxF &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gRxF &\gSxF &\N  
+\\  \bG & \N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gIxG &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\N   &\gRxG &\gSxG &\N  
 %
-% Vertical lines and other post-xymatrix latex
+% vertical lines and other post-xymatrix latex
 %
-\ar@{-}"gBE";"gBD"
-\ar@{-}"gCD";"gCA"
-\ar@{-}"gDE";"gDB"
-\ar@{-}"gEE";"gED"
-\ar@{=}"gHF";"gHD"
-\ar@{=}"gIG";"gIE"
-\ar@{-}"gLE";"gLD"
-\ar@{-}"gMD";"gMB"
-\ar@{-}"gNE";"gNC"
-\ar@{-}"gOE";"gOD"
-\ar@{=}"gSC";"gSD"\ar@{=}"gSC";"gSE"\ar@{=}"gSC";"gSF"\ar@{=}"gSC";"gSG"
+\ar@{-}"gBxE";"gBxD"
+\ar@{-}"gCxD";"gCxA"
+\ar@{-}"gDxE";"gDxB"
+\ar@{-}"gExE";"gExD"
+\ar@{=}"gHxF";"gHxD"
+\ar@{=}"gIxG";"gIxE"
+\ar@{-}"gLxE";"gLxD"
+\ar@{-}"gMxD";"gMxB"
+\ar@{-}"gNxE";"gNxC"
+\ar@{-}"gOxE";"gOxD"
+\ar@{=}"gSxC";"gSxD"\ar@{=}"gSxC";"gSxE"\ar@{=}"gSxC";"gSxF"\ar@{=}"gSxC";"gSxG"
 }
 
 \end{document}
