--- a/samples/test9.tex
+++ b/samples/test9.tex
@@ -32,25 +32,25 @@
 
 % Qubit circuit matrix:
 %
-% q0: n  , gBA, n  , gDA, gEA, n  
-% q1: gAB, gBB, gCB, gDB, n  , n  
-% q2: gAC, n  , gCC, n  , gEC, n  
+% q0: n  , gBxA, n  , gDxA, gExA, n  
+% q1: gAxB, gBxB, gCxB, gDxB, n  , n  
+% q2: gAxC, n  , gCxC, n  , gExC, n  
 
 \documentclass[11pt]{article}
 \input{xyqcirc.tex}
 
 % definitions for the circuit elements
 
-\def\gAB{\b\w\A{gAB}}
-\def\gAC{\op{\sqrt{X}}\w\A{gAC}}
-\def\gBA{\b\w\A{gBA}}
-\def\gBB{\o\w\A{gBB}}
-\def\gCB{\b\w\A{gCB}}
-\def\gCC{\op{{\sqrt{X}}^\dagger}\w\A{gCC}}
-\def\gDA{\b\w\A{gDA}}
-\def\gDB{\o\w\A{gDB}}
-\def\gEA{\b\w\A{gEA}}
-\def\gEC{\op{\sqrt{X}}\w\A{gEC}}
+\def\gAxB{\b\w\A{gAxB}}
+\def\gAxC{\op{\sqrt{X}}\w\A{gAxC}}
+\def\gBxA{\b\w\A{gBxA}}
+\def\gBxB{\o\w\A{gBxB}}
+\def\gCxB{\b\w\A{gCxB}}
+\def\gCxC{\op{{\sqrt{X}}^\dagger}\w\A{gCxC}}
+\def\gDxA{\b\w\A{gDxA}}
+\def\gDxB{\o\w\A{gDxB}}
+\def\gExA{\b\w\A{gExA}}
+\def\gExC{\op{\sqrt{X}}\w\A{gExC}}
 
 % definitions for bit labels and initial states
 
@@ -61,17 +61,17 @@
 % The quantum circuit as an xymatrix
 
 \xymatrix@R=5pt@C=10pt{
-    \bA & \n   &\gBA &\n   &\gDA &\gEA &\n  
-\\  \bB & \gAB &\gBB &\gCB &\gDB &\n   &\n  
-\\  \bC & \gAC &\n   &\gCC &\n   &\gEC &\n  
+    \bA & \n   &\gBxA &\n   &\gDxA &\gExA &\n  
+\\  \bB & \gAxB &\gBxB &\gCxB &\gDxB &\n   &\n  
+\\  \bC & \gAxC &\n   &\gCxC &\n   &\gExC &\n  
 %
-% Vertical lines and other post-xymatrix latex
+% vertical lines and other post-xymatrix latex
 %
-\ar@{-}"gAC";"gAB"
-\ar@{-}"gBB";"gBA"
-\ar@{-}"gCC";"gCB"
-\ar@{-}"gDB";"gDA"
-\ar@{-}"gEC";"gEA"
+\ar@{-}"gAxC";"gAxB"
+\ar@{-}"gBxB";"gBxA"
+\ar@{-}"gCxC";"gCxB"
+\ar@{-}"gDxB";"gDxA"
+\ar@{-}"gExC";"gExA"
 }
 
 \end{document}
