Added etc function

--- a/xyqcirc.tex
+++ b/xyqcirc.tex
@@ -88,7 +88,7 @@
 \def\c{\ar@{=}[l]}
 \def\W{\ar@{-}[l]<-.07ex> \ar@{-}[l]<-.07ex> \ar@{-}[l]}
 \def\C{\ar@{=}[l]<-.07ex> \ar@{=}[l]<-.07ex> \ar@{=}[l]}
-
+\def\d{\ar@{.}[l]}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % labels
@@ -116,6 +116,7 @@
 \def\l{*-{}\c}
 \def\N{*-{}\W}
 \def\L{*-{}\C}
+\def\e{\cdots} % dashed line
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % vertical lines
@@ -143,7 +144,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % multiple qubit gates
 
-% utulity text box for figuring out width of things
+% utility text box for figuring out width of things
 \newbox{\sbox}
 
 % empty space of width determined by the text argument
